# tech-blog-catchup

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
backend/: .env.example  Dockerfile  alembic.ini  config.yaml  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_favorites.py
backend/scripts/: backup_db.py  crawl_meta_5.py  redo_and_compare.py  seed_posts.json  seed_test_data.py  sync_to_prod.py  verify_deployment.py
backend/src/: config.py  database.py  env_check.py  models.py  scheduler.py
backend/src/api/: app.py  auth_middleware.py  rate_limit.py  routes.py  schemas.py
backend/src/crawler/: article_crawler.py  circuit_breaker.py  crawl_manager.py  feed_discoverer.py  feed_parser.py  sitemap_parser.py
backend/src/extractor/: __init__.py  content_cleaner.py  content_generator.py  content_scanner.py  html_to_markdown.py  pipeline.py  quality_scorer.py  summarizer.py  types.py
backend/src/podcast/: generator.py  manager.py
backend/src/tagger/: auto_tagger.py
backend/tests/: test_api.py  test_auto_tagger.py  test_batch_generate.py  test_circuit_breaker.py  test_config.py  test_crawl_manager.py  test_feed_discoverer.py  test_feed_parser.py  test_models.py  test_parallel_tts.py  test_quality_gate.py  test_scheduler.py  test_since_filter.py  test_sitemap_parser.py  test_submit_api.py  test_user.py  test_user_submission_model.py
backend/tests/test_extractor/: test_content_cleaner.py  test_firecrawl.py  test_html_to_markdown.py  test_jina.py  (+4 more)
(+303 files in other folders)
