[project]
name = "tech-blog-catchup"
version = "0.1.0"
description = "Scrape tech blogs, convert to conversational podcasts, browse and listen"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "crawl4ai>=0.4",
    "atoma>=0.0.17",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "rich>=13.0",
    "openai>=1.0",
    "podcastfy>=0.2",
    "mutagen>=1.47",
    "slowapi>=0.1",
    "alembic>=1.13",
    "trafilatura>=2.0",
    "markdownify>=0.14",
    "httpx>=0.27",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "PyJWT>=2.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
